--- a/Testing/blip2/blip2.ipynb
+++ b/Testing/blip2/blip2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480ffc81f559402f9b5251116935c58c",
+       "model_id": "0e6962e1153c4a41b1708358ef954976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,43 +37,166 @@
     "device = \"mps\"\n",
     "\n",
     "processor = Blip2Processor.from_pretrained(\"Salesforce/blip2-opt-2.7b\")\n",
-    "model = Blip2ForConditionalGeneration.from_pretrained(\n",
+    "caption_model = Blip2ForConditionalGeneration.from_pretrained(\n",
     "    \"Salesforce/blip2-opt-2.7b\", torch_dtype=torch.float32\n",
-    ")\n",
-    "\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://lumiere-a.akamaihd.net/v1/images/h_101dalmatians_mobile_19752_992e2a21.jpeg?region=0%2C0%2C640%2C480\"\n",
-    "image = Image.open(requests.get(url, stream=True).raw)\n",
-    "\n",
-    "inputs = processor(images=image, return_tensors=\"pt\").to(torch.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'PIL.JpegImagePlugin.JpegImageFile'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://lumiere-a.akamaihd.net/v1/images/h_101dalmatians_mobile_19752_992e2a21.jpeg?region=0%2C0%2C640%2C480\"\n",
+    "image = Image.open(requests.get(url, stream=True).raw)\n",
+    "print(type(image))\n",
+    "\n",
+    "inputs = processor(images=image, return_tensors=\"pt\").to(torch.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/transformers/generation/utils.py:1346: UserWarning: Using `max_length`'s default (20) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[    2,   627,   385,   337,  9244,  2071,    32,  2828,   561,    11,\n",
+      "            10, 15800, 50118]])\n",
       "the dalmatians are sitting together in a cartoon\n"
      ]
     }
    ],
    "source": [
-    "generated_ids = model.generate(**inputs)\n",
+    "generated_ids = caption_model.generate(**inputs)\n",
     "generated_text = processor.batch_decode(generated_ids, skip_special_tokens=True)[0].strip()\n",
     "print(generated_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 13])\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "model = SentenceTransformer('multi-qa-MiniLM-L6-cos-v1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "384\n",
+      "Similarity: tensor([[0.7250, 0.2467],\n",
+      "        [0.7250, 0.2467],\n",
+      "        [0.7250, 0.2467]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sentences we want to encode. Example:\n",
+    "sentence = [generated_text, generated_text, generated_text]\n",
+    "passage_embedding = model.encode(['dalmatians',\n",
+    "                                  'cat'])\n",
+    "\n",
+    "# Sentences are encoded by calling model.encode()\n",
+    "embedding = model.encode(sentence)\n",
+    "embedding = embedding.squeeze()\n",
+    "print(len(embedding))\n",
+    "print(len(passage_embedding[0]))\n",
+    "\n",
+    "print(\"Similarity:\", util.dot_score(embedding, passage_embedding))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
