--- a/Testing/blip2/blip2_ak_testing.ipynb
+++ b/Testing/blip2/blip2_ak_testing.ipynb
@@ -154,19 +154,16 @@
     "\n",
     "    image = PIL.Image.open(cwd + \"datasets/Animal_Kingdom/action_recognition/dataset/image/\" + img_path, mode=\"r\")\n",
     "    inputs = processor(images=image, return_tensors=\"pt\").to(torch.float32)\n",
-    "    print(type(processor))\n",
-    "    print(inputs[\"pixel_values\"].shape)\n",
-    "    print((inputs[\"pixel_values\"]).device)\n",
-    "    print(inputs[\"pixel_values\"].squeeze().shape)\n",
+    "    # print(type(processor))\n",
+    "    # print(inputs[\"pixel_values\"].shape)\n",
+    "    # print((inputs[\"pixel_values\"]).device)\n",
+    "    # print(inputs[\"pixel_values\"].squeeze().shape)\n",
     "    generated_ids = caption_model.generate(**inputs)\n",
-    "    print(generated_ids.shape)\n",
+    "    # print(generated_ids.shape)\n",
     "    inputs = inputs[\"pixel_values\"]\n",
-    "    print(\"-------\")\n",
-    "    print(inputs.device)\n",
-    "    mps_device = torch.device(\"mps\")\n",
-    "    inputs.to(mps_device)\n",
-    "    print(inputs.device)\n",
-    "    \n",
+    "    # print(\"-------\")\n",
+    "    # print(inputs.device)\n",
+    "\n",
     "    generated_text = processor.batch_decode(generated_ids, skip_special_tokens=True)[0].strip()\n",
     "\n",
     "    # Load the image from the .jpg file\n",
