--- a/Testing/blip2/blip2.ipynb
+++ b/Testing/blip2/blip2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e6962e1153c4a41b1708358ef954976",
+       "model_id": "22d36f1b42744e4396f9683906d53a45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[    2,   627,   385,   337,  9244,  2071,    32,  2828,   561,    11,\n",
-      "            10, 15800, 50118]])\n",
       "the dalmatians are sitting together in a cartoon\n"
      ]
     }
@@ -94,22 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 13])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,13 +109,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(384,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"hi\"\n",
+    "embedding = model.encode(sentence)\n",
+    "print(embedding.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 384)\n",
       "3\n",
       "384\n",
       "Similarity: tensor([[0.7250, 0.2467],\n",
