blip2 baseline testing

--- a/Testing/blip2/test.ipynb
+++ b/Testing/blip2/test.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "676d2b45df244e42be010ad725616077",
+       "model_id": "294c598b8e54443985e8c4009e55e489",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,19 +102,31 @@
      "output_type": "display_data"
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/lightning/pytorch/trainer/call.py:52: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x1575d8940>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 1478, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 1436, in _shutdown_workers\n",
+      "    if self._persistent_workers or self._workers_status[worker_id]:\n",
+      "AttributeError: '_MultiProcessingDataLoaderIter' object has no attribute '_workers_status'\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<string>\", line 1, in <module>\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/multiprocessing/spawn.py\", line 116, in spawn_main\n",
+      "    exitcode = _main(fd, parent_sentinel)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/multiprocessing/spawn.py\", line 126, in _main\n",
+      "    self = reduction.pickle.load(from_parent)\n",
+      "_pickle.UnpicklingError: pickle data was truncated\n"
      ]
     }
    ],
