--- a/Testing/xclip/testing.ipynb
+++ b/Testing/xclip/testing.ipynb
@@ -170,6 +170,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from transformers import XCLIPVisionModel, XCLIPVisionConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Initializing a XCLIPVisionModel with microsoft/xclip-base-patch32 style configuration\n",
+    "configuration = XCLIPVisionConfig(num_frames=10)\n",
+    "\n",
+    "# Initializing a XCLIPVisionModel model from the microsoft/xclip-base-patch32 style configuration\n",
+    "model = XCLIPVisionModel(configuration)\n",
+    "\n",
+    "# Accessing the model configuration\n",
+    "configuration = model.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XCLIPVisionConfig {\n",
+      "  \"attention_dropout\": 0.0,\n",
+      "  \"drop_path_rate\": 0.0,\n",
+      "  \"hidden_act\": \"quick_gelu\",\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"image_size\": 224,\n",
+      "  \"initializer_factor\": 1.0,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-05,\n",
+      "  \"mit_hidden_size\": 512,\n",
+      "  \"mit_intermediate_size\": 2048,\n",
+      "  \"mit_num_attention_heads\": 8,\n",
+      "  \"mit_num_hidden_layers\": 1,\n",
+      "  \"model_type\": \"xclip_vision_model\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_channels\": 3,\n",
+      "  \"num_frames\": 10,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"patch_size\": 32,\n",
+      "  \"transformers_version\": \"4.29.2\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(configuration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
